--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,15 @@
 
 .main-component{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-size: 13px;
     margin: 0;
     padding: 0;
 }
 
-/* .header-component{
-    
-} */
+ .header-component{
+   
+    height: 100%;
+} 
 
 .dashboard-component{
     left: 0;
