--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
    
     color: white;
-    font-family: "Helvetica Neue", Arial, sans-serif;
+    /* font-family: "Helvetica Neue", Arial, sans-serif; */
 }
 
 header {
@@ -11,6 +11,7 @@ header {
     background-color: #dc2626;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
 }
 
 .header-content {
