--- a/src/app/pages/tarifas-list/tarifas-list.component.html
+++ b/src/app/pages/tarifas-list/tarifas-list.component.html
@@ -8,48 +8,42 @@
 
 <div>
     <h2>Lista de tarifas</h2>
-    <mat-form-field>
-        <mat-label>filtro</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Tarifa ..." #input>
-      </mat-form-field>
+    
       
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="tarifaList" matSort>
       
-          <!-- ID Column -->
+         
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            <th mat-header-cell *matHeaderCellDef > ID </th>
+            <td mat-cell *matCellDef="let tarifa"> {{tarifa.id}} </td>
           </ng-container>
       
-          <!-- Progress Column -->
+          
           <ng-container matColumnDef="Tarifa">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tarifa </th>
-            <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+            <th mat-header-cell *matHeaderCellDef > Tarifa </th>
+            <td mat-cell *matCellDef="let tarifa"> {{tarifa.tipoTarifa}} </td>
           </ng-container>
       
-          <!-- Name Column -->
+        
           <ng-container matColumnDef="Precio/Hora">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio/Hora </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            <th mat-header-cell *matHeaderCellDef > Precio/Hora </th>
+            <td mat-cell *matCellDef="let tarifa"> ${{tarifa.precioHora}} </td>
           </ng-container>
       
-          <!-- Fruit Column -->
+        
           <ng-container matColumnDef="Descripcion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Descripcion </th>
-            <td mat-cell *matCellDef="let row"> {{row.data}} </td>
+            <th mat-header-cell *matHeaderCellDef > Descripcion </th>
+            <td mat-cell *matCellDef="let tarifa"> {{tarifa.descripcion}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
       
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-          </tr>
+         
         </table>
       
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+       
       </div>
       
       
