Creacion de Lista Vehiculo y formulario de Vehiculo funcionando

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,8 +6,9 @@
                 <h2>Menú</h2>
                 <ul>
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">Agregar Vehiculo</a></li>
+                    <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
                     <li><a routerLink="pages/tarifas-list">Tarifas</a></li>
+                    
                    
                 </ul>
             </div>
