--- a/src/app/pages/vehiculos-list/vehiculos-list.component.html
+++ b/src/app/pages/vehiculos-list/vehiculos-list.component.html
@@ -1,1 +1,52 @@
-<p>vehiculos-list works!</p>
+<div>
+    
+    <button mat-raised-button  routerLink="/pages/vehiculos-add" class="custom-button">Agregar nuevo Vehiculo</button>
+</div>
+<br>
+<mat-divider></mat-divider>
+
+<div>
+    <h2>Lista de Vehiculo</h2>
+    
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="vehiculoList" matSort>
+<!-- Verifica que el identificador de columna sea "Placa" -->
+<ng-container matColumnDef="Placa">
+    <th mat-header-cell *matHeaderCellDef> Placa </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.placa }} </td>
+  </ng-container>
+  
+<!-- Columna Marca -->
+<ng-container matColumnDef="Marca">
+    <th mat-header-cell *matHeaderCellDef> Marca </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.marca }} </td>
+  </ng-container>
+  
+  <!-- Columna Cedula -->
+  <ng-container matColumnDef="Cedula">
+    <th mat-header-cell *matHeaderCellDef> Cédula </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.cedula }} </td>
+  </ng-container>
+  
+  <!-- Columna Entrada -->
+  <ng-container matColumnDef="Entrada">
+    <th mat-header-cell *matHeaderCellDef> Entrada </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.entrada }} </td>
+  </ng-container>
+  
+  <!-- Columna Salida -->
+  <ng-container matColumnDef="Salida">
+    <th mat-header-cell *matHeaderCellDef> Salida </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.salida }} </td>
+  </ng-container>
+  
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
+      
+         
+        </table>
+      
+       
+      </div>
