--- a/src/app/pages/tarifas-list/tarifas-list.component.html
+++ b/src/app/pages/tarifas-list/tarifas-list.component.html
@@ -36,6 +36,22 @@
             <th mat-header-cell *matHeaderCellDef > Descripcion </th>
             <td mat-cell *matCellDef="let tarifa"> {{tarifa.descripcion}} </td>
           </ng-container>
+
+
+          <ng-container matColumnDef="Acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let tarifa">
+              <button mat-icon-button color="primary" matTooltip="Editar" (click)="editTarifa(tarifa)">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" matTooltip="Eliminar" >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          
+          
+          
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
