Creacion de Parqueadero

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Sistema de Administración de Parqueadero</h1>
+            <h1>ParkControl</h1>
             <!-- <img src="https://th.bing.com/th/id/OIG.BQf9sPZtIjWfp5c_by8O?pid=ImgGn" alt="Logo" class="logo"> -->
         </div>
     </header>
