--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,8 +6,11 @@
                 <h2>Menú</h2>
                 <ul>
                     <li><a href="">Inicio</a></li>
-                    <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
+                    <li><a routerLink="pages/listaVehiculos">Parqueadero</a></li>
                     <li><a routerLink="pages/tarifas-list">Tarifas</a></li>
+                    <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
+                    <li><a routerLink="pages/acercade">Acerca De</a></li>
+                    <li><a routerLink="pages/ayuda">Ayuda</a></li>
                     
                    
                 </ul>
