--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -1,1 +1,38 @@
-<p>parqueadero works!</p>
+<div>
+    <h2>Parking</h2>
+    
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="vehiculoList" matSort>
+<!-- Verifica que el identificador de columna sea "Placa" -->
+<ng-container matColumnDef="Placa">
+    <th mat-header-cell *matHeaderCellDef> Placa </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.placa }} </td>
+  </ng-container>
+  
+<!-- Columna Marca -->
+<ng-container matColumnDef="Entrada">
+    <th mat-header-cell *matHeaderCellDef> Entrada </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.entrada }} </td>
+  </ng-container>
+  
+
+  <ng-container matColumnDef="Salida">
+    <th mat-header-cell *matHeaderCellDef> Salida </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.salida }} </td>
+  </ng-container>
+
+  
+
+
+
+  
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
+      
+         
+        </table>
+      
+       
+      </div>
