--- a/src/app/pages/vehiculos-list/vehiculos-list.component.html
+++ b/src/app/pages/vehiculos-list/vehiculos-list.component.html
@@ -23,23 +23,29 @@
     <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.marca }} </td>
   </ng-container>
   
+
+  <ng-container matColumnDef="Color">
+    <th mat-header-cell *matHeaderCellDef> Color </th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.color }} </td>
+  </ng-container>
+
+  
   <!-- Columna Cedula -->
   <ng-container matColumnDef="Cedula">
     <th mat-header-cell *matHeaderCellDef> Cédula </th>
     <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.cedula }} </td>
   </ng-container>
   
-  <!-- Columna Entrada -->
-  <ng-container matColumnDef="Entrada">
-    <th mat-header-cell *matHeaderCellDef> Entrada </th>
-    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.entrada }} </td>
+
+ 
+
+  <ng-container matColumnDef="Nombre">
+    <th mat-header-cell *matHeaderCellDef> Nombre</th>
+    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.nombre }} </td>
   </ng-container>
-  
-  <!-- Columna Salida -->
-  <ng-container matColumnDef="Salida">
-    <th mat-header-cell *matHeaderCellDef> Salida </th>
-    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.salida }} </td>
-  </ng-container>
+
+
+
   
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
