--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -1,38 +1,48 @@
 <div>
-    <h2>Parking</h2>
-    
-      
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="vehiculoList" matSort>
-<!-- Verifica que el identificador de columna sea "Placa" -->
-<ng-container matColumnDef="Placa">
-    <th mat-header-cell *matHeaderCellDef> Placa </th>
-    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.placa }} </td>
-  </ng-container>
-  
-<!-- Columna Marca -->
-<ng-container matColumnDef="Entrada">
-    <th mat-header-cell *matHeaderCellDef> Entrada </th>
-    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.entrada }} </td>
-  </ng-container>
-  
+  <h2>Parqueadero</h2>
+  <div class="new-vehiculo">
 
-  <ng-container matColumnDef="Salida">
-    <th mat-header-cell *matHeaderCellDef> Salida </th>
-    <td mat-cell *matCellDef="let vehiculo"> {{ vehiculo.salida }} </td>
-  </ng-container>
+    <button mat-raised-button routerLink="/pages/vehiculos-add">Registrar Vehiculo</button>
+  </div>
+  <br/>
+  <mat-divider></mat-divider>
+  <br/>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="ticketList" matSort>
+      <!-- Verifica que el identificador de columna sea "Placa" -->
+      <ng-container matColumnDef="Placa">
+        <th mat-header-cell *matHeaderCellDef> Placa </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.placa }} </td>
+      </ng-container>
 
-  
+      <!-- Columna Marca -->
+      <ng-container matColumnDef="Entrada">
+        <th mat-header-cell *matHeaderCellDef> Hora Entrada </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.horaEntrada }} </td>
+      </ng-container>
 
 
+      <!-- <ng-container matColumnDef="Salida">
+        <th mat-header-cell *matHeaderCellDef> Salida </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.horaSalida }} </td>
+      </ng-container> -->
+      <ng-container matColumnDef="Salida">
+        <th mat-header-cell *matHeaderCellDef> Hora Salida </th>
+        <td mat-cell *matCellDef="let ticket">
+          <!-- Verificar si ticket.horaSalida es null o vacío -->
+          <ng-container *ngIf="!ticket.horaSalida; else mostrarHoraSalida">
+            <button mat-button >Marcar Salida</button>
+          </ng-container>
+          <ng-template #mostrarHoraSalida>{{ ticket.horaSalida }}</ng-template>
+        </td>
+      </ng-container>
 
-  
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
-      
-         
-        </table>
-      
-       
-      </div>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let ticket; columns: displayedColumns;"></tr>
+
+
+    </table>
+
+
+  </div>
