--- a/src/app/pages/vehiculos-add/vehiculos-add.component.css
+++ b/src/app/pages/vehiculos-add/vehiculos-add.component.css
@@ -4,3 +4,8 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+.vehiculo-form button{
+  background-color: #007bff;
+  color: white;
+}
