--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -31,11 +31,15 @@
         <td mat-cell *matCellDef="let ticket">
           <!-- Verificar si ticket.horaSalida es null o vacío -->
           <ng-container *ngIf="!ticket.horaSalida; else mostrarHoraSalida">
-            <button mat-button >Marcar Salida</button>
+            <!-- Botón "Marcar Salida" con el evento click que llama a la función editVehiculo(vehiculo) -->
+            <button mat-button (click)="editVehiculo(ticket.vehiculo)">Marcar Salida</button>
           </ng-container>
           <ng-template #mostrarHoraSalida>{{ ticket.horaSalida }}</ng-template>
         </td>
       </ng-container>
+      
+      
+      
 
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
