--- a/src/app/pages/facturas-add/facturas-add.component.html
+++ b/src/app/pages/facturas-add/facturas-add.component.html
@@ -1,44 +1,64 @@
-<div>
-  <form action="" class="vehiculo-form">
-    <!-- Columna Placa -->
-    <!-- Campo Marca -->
-    <h2>Factura</h2>
-    <h3>Datos del Vehiculo</h3>
-    <mat-form-field>
-      <mat-label>Placa</mat-label>
-      <input matInput [(ngModel)]="vehiculo.placa" type="text" name="placa" (input)="formatPlaca()" (keydown)="onKeyDown($event)" required>
-    </mat-form-field>
+<div class="container">
+  <!-- Columna izquierda con el formulario de Datos del Vehículo -->
+  <div class="column-left">
+    <form action="" class="vehiculo-form">
+      <!-- Campos del formulario -->
+      <h2>Datos Facturación</h2>
+      <h3>Datos del Vehículo</h3>
+      <mat-form-field>
+        <mat-label>Placa</mat-label>
+        <input matInput [(ngModel)]="vehiculo.placa" type="text" name="placa" (input)="formatPlaca()" (keydown)="onKeyDown($event)" required>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Marca</mat-label>
-      <input matInput [(ngModel)]="vehiculo.marca" type="text" name="marca">
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Marca</mat-label>
+        <input matInput [(ngModel)]="vehiculo.marca" type="text" name="marca">
+      </mat-form-field>
 
-    <!-- Campo Descripcion -->
-    <mat-form-field>
-      <mat-label>Descripción</mat-label>
-      <input matInput [(ngModel)]="vehiculo.descripcion" type="text" name="descripcion">
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Cédula</mat-label>
+        <input matInput [(ngModel)]="vehiculo.cedula" type="text" name="cedula">
+      </mat-form-field>
 
-    <!-- Campo Color -->
-    <mat-form-field>
-      <mat-label>Color</mat-label>
-      <input matInput [(ngModel)]="vehiculo.color" type="text" name="color">
-    </mat-form-field>
-    
-   
-    <h3>Campos opcionales:</h3>
-    <!-- Campo Cedula -->
-    <mat-form-field>
-      <mat-label>Cédula</mat-label>
-      <input matInput [(ngModel)]="vehiculo.cedula" type="text" name="cedula">
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Nombre</mat-label>
+        <input matInput [(ngModel)]="vehiculo.nombre" type="text" name="nombre">
+      </mat-form-field>
+    </form>
+  </div>
 
-    <!-- Campo Nombre -->
-    <mat-form-field>
-      <mat-label>Nombre</mat-label>
-      <input matInput [(ngModel)]="vehiculo.nombre" type="text" name="nombre">
-    </mat-form-field>
+  <!-- Columna derecha con la Lista de tarifas -->
+  <div class="column-right">
+    <h2>Lista de tarifas</h2>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="tarifaList" matSort>
+        <!-- Definir columnas de la tabla -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <td mat-cell *matCellDef="let tarifa">{{ tarifa.id }}</td>
+        </ng-container>
 
-  </form>
+        <ng-container matColumnDef="Tarifa">
+          <th mat-header-cell *matHeaderCellDef>Tarifa</th>
+          <td mat-cell *matCellDef="let tarifa">{{ tarifa.tarifa }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Precio/Hora">
+          <th mat-header-cell *matHeaderCellDef>Precio/Hora $</th>
+          <td mat-cell *matCellDef="let tarifa">{{ tarifa.precioHora }}</td>
+        </ng-container>
+
+        <!-- Asignar columnas a las filas de la tabla -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </div>
 </div>
+
+
+
+
+
+
+
