Domain,servicios  de la clase  factura

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
                     <li><a href="">Inicio</a></li>
                     <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
                     <li><a routerLink="pages/tarifas-list">Tarifas</a></li>
+                    <li><a routerLink="pages/facturas-list">Lista de Facturas</a></li>
                     <li><a routerLink="pages/acercade">Acerca De</a></li>
                     <li><a routerLink="pages/ayuda">Ayuda</a></li>
                     
