--- a/src/app/pages/facturas-list/facturas-list.component.html
+++ b/src/app/pages/facturas-list/facturas-list.component.html
@@ -1,54 +1,46 @@
 
-<mat-divider></mat-divider>
-
 <div>
-    <h2>Lista de Facturas</h2>
-    
-      
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="facturaList" matSort>
-<!-- Verifica que el identificador de columna sea "Placa" -->
-<ng-container matColumnDef="Id">
-    <th mat-header-cell *matHeaderCellDef> Id</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Numero">
-    <th mat-header-cell *matHeaderCellDef> Numero</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Fecha">
-    <th mat-header-cell *matHeaderCellDef> Fecha</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.fecha }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Total">
-    <th mat-header-cell *matHeaderCellDef> Total</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.total }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Ticket">
-    <th mat-header-cell *matHeaderCellDef> Ticket</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.ticket }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Tarifa">
-    <th mat-header-cell *matHeaderCellDef> Tarifa</th>
-    <td mat-cell *matCellDef="let factura"> {{ factura.tarifa }} </td>
-  </ng-container>
-  
+  <h2>Historial</h2>
 
 
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="facturaList" matSort>
+      <!-- Verifica que el identificador de columna sea "Placa" -->
+      <ng-container matColumnDef="Id">
+        <th mat-header-cell *matHeaderCellDef> Id</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
+      </ng-container>
 
-  
+      <ng-container matColumnDef="Numero">
+        <th mat-header-cell *matHeaderCellDef> Numero</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
+      </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
-      
-         
-        </table>
-      
-       
-      </div>
+      <ng-container matColumnDef="Fecha">
+        <th mat-header-cell *matHeaderCellDef> Fecha</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.fecha }} </td>
+      </ng-container>
 
+      <ng-container matColumnDef="Total">
+        <th mat-header-cell *matHeaderCellDef> Total</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.total }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Ticket">
+        <th mat-header-cell *matHeaderCellDef> Ticket</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.ticket }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Tarifa">
+        <th mat-header-cell *matHeaderCellDef> Tarifa</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.tarifa }} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let tarifa; columns: displayedColumns;"></tr>
+
+
+    </table>
+
+
+  </div>
