--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -15,6 +15,10 @@
         <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.placa }} </td>
       </ng-container>
 
+      <ng-container matColumnDef="Marca">
+        <th mat-header-cell *matHeaderCellDef> Marca </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.marca }} </td>
+      </ng-container>
       <!-- Columna Marca -->
       <ng-container matColumnDef="Entrada">
         <th mat-header-cell *matHeaderCellDef> Hora Entrada </th>
@@ -32,7 +36,7 @@
           <!-- Verificar si ticket.horaSalida es null o vacío -->
           <ng-container *ngIf="!ticket.horaSalida; else mostrarHoraSalida">
             <!-- Botón "Marcar Salida" con el evento click que llama a la función editVehiculo(vehiculo) -->
-            <button mat-button (click)="editVehiculo(ticket.vehiculo)">Marcar Salida</button>
+            <button mat-button (click)="goToFacture(ticket.vehiculo)">Marcar Salida</button>
           </ng-container>
           <ng-template #mostrarHoraSalida>{{ ticket.horaSalida }}</ng-template>
         </td>
