--- a/src/app/pages/dialog-animations-example/dialog-animations-example.component.html
+++ b/src/app/pages/dialog-animations-example/dialog-animations-example.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Delete file</h1>
+<h1 mat-dialog-title>Eliminar Tarifa</h1>
 <div mat-dialog-content>
-  Would you like to delete cat.jpeg?
+  {{mensaje}}
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+  <button mat-button (click)="cerrarDialogo()">No</button>
+  <button mat-button (click)="confirmado()" cdkFocusInitial>Sí</button>
 </div>
