--- a/src/app/pages/tarifas-add/tarifas-add.component.html
+++ b/src/app/pages/tarifas-add/tarifas-add.component.html
@@ -40,7 +40,9 @@
           
         <br/>
 
-          <button mat-raised-button type="submit" class="custom-mat-button">Guardar</button>
+          <button mat-raised-button type="submit" class="custom-mat-button"  (click)="openSnackBar()">Guardar</button>
+          
+
     </form>
 
 </div>
