--- a/src/app/pages/facturas-add/facturas-add.component.html
+++ b/src/app/pages/facturas-add/facturas-add.component.html
@@ -61,7 +61,7 @@
     <br/>
     <mat-card>
         <h2>Tiempo parqueo</h2>
-        {{ticket.tiempoParqueo}}
+        {{ticket.tiempoParqueo}} minutos
     </mat-card>
 
   
