Inout con Mayusculas

--- a/src/app/pages/tarifas-add/tarifas-add.component.html
+++ b/src/app/pages/tarifas-add/tarifas-add.component.html
@@ -13,8 +13,9 @@
 <div class="tarifas-form" >
     <form action="" #tarifaForm="ngForm" (ngSubmit)="checkDataForm()">
         <mat-form-field>
-            <mat-label>Tipo Tarifa</mat-label>
-            <input  matInput  [(ngModel)]="tarifa.tarifa" type="text" name="tarifa" required>
+          
+            <mat-label>Tarifa</mat-label>
+            <input  matInput  [(ngModel)]="tarifa.tarifa" type="text" name="tarifa" (input)="convertirAMayusculas()"  required>
           </mat-form-field>
 
           <mat-form-field>
