validaciones de algunos campos y snackbar

--- a/src/app/pages/dialog-animations-example/dialog-animations-example.component.html
+++ b/src/app/pages/dialog-animations-example/dialog-animations-example.component.html
@@ -3,6 +3,6 @@
   {{mensaje}}
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="cerrarDialogo()">No</button>
-  <button mat-button (click)="confirmado()" cdkFocusInitial>Sí</button>
+  <button mat-button (click)="cerrarDialogo()" cdkFocusInitial>No</button>
+  <button mat-button (click)="confirmado()" >Sí</button>
 </div>
