--- a/src/app/pages/snackbar/snackbar.component.html
+++ b/src/app/pages/snackbar/snackbar.component.html
@@ -1,5 +1,5 @@
 <span class="example-car-party" matSnackBarLabel>
-    <p>Agregado Correctamente</p>
+    <p>{{mensaje}}</p>
   </span>
   <span matSnackBarActions>
     <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">🚗</button>
