pagina acerca de creada con informacion de los creadores

--- a/src/app/pages/acercade/acercade.component.html
+++ b/src/app/pages/acercade/acercade.component.html
@@ -1,1 +1,16 @@
-<p>acercade works!</p>
+<div class="container">
+    <h2>Acerca de</h2>
+  
+    <div class="profile-card">
+      <img src="assets/1.jpeg" alt="Paul Astudillo">
+      <h3>Paul Astudillo</h3>
+      <p>Desarrollador web apasionado por la tecnología y el desarrollo de software.</p>
+    </div>
+  
+    <div class="profile-card">
+      <img src="assets/2.jpeg" alt="Juan Tapia">
+      <h3>Juan Tapia</h3>
+      <p>Entusiasta de la programación y apasionado por la creación de aplicaciones útiles y eficientes.</p>
+    </div>
+  </div>
+  
