--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,11 +7,15 @@ body {
 }
 
 header {
+    top: 0;
+    left: 0;
+    position: fixed;
     padding: 20px;
     background-color: #dc2626;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    
+    width: 100%;
+    z-index: 999;
 }
 
 .header-content {
