--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
             <div class="menu">
                 <h2>Menú</h2>
                 <ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a routerLink="pages/inicio">Inicio</a></li>
                     <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
                     <li><a routerLink="pages/tarifas-list">Tarifas</a></li>
                     <li><a routerLink="pages/facturas-list">Lista de Facturas</a></li>
