validacion de la cedula

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <a routerLink="pages/parqueadero" class="btn">
+    <a routerLink="/pages/parqueadero" class="btn">
       <img src="assets/Inicio-transformed.png" alt="Estacionamiento">
     </a>
   </div>
