cambio tabla parqueo

--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -19,6 +19,16 @@
         <th mat-header-cell *matHeaderCellDef> Marca </th>
         <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.marca }} </td>
       </ng-container>
+
+      <ng-container matColumnDef="Color">
+        <th mat-header-cell *matHeaderCellDef> Color </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.color }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Descripción">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let ticket"> {{ ticket.vehiculo.descripcion }} </td>
+      </ng-container>
       <!-- Columna Marca -->
       <ng-container matColumnDef="Entrada">
         <th mat-header-cell *matHeaderCellDef> Hora Entrada </th>
