--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,9 +4,10 @@
       <img src="assets/Logo.jpeg" alt="Logo" class="logo">
       <h1>Parking Control</h1>
     </div>
-    <section>
+    <section class="botones-navegacion">
       <div class="example-label"></div>
       <div class="example-button-row">
+        
         <div class="example-button-container">
           <a mat-mini-fab class="mat-button-disabled" aria-label="Example icon button with a home icon" routerLink="pages/inicio">
             <mat-icon>home</mat-icon>
