Manual de Usuario Creado

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,12 +17,12 @@
           
           
           <div class="example-button-container">
-            <a mat-mini-fab color="accent" aria-label="Example icon button with a plus one icon" routerLink="pages/parqueadero">
+            <a mat-mini-fab class="mat-button-disabled"aria-label="Example icon button with a plus one icon" routerLink="pages/parqueadero">
               <mat-icon>plus_one</mat-icon>
             </a>
           </div>
           <div class="example-button-container">
-            <a mat-mini-fab color="warn" aria-label="Example icon button with a filter list icon" routerLink="pages/tarifas-list">
+            <a mat-mini-fab class="mat-button-disabled" aria-label="Example icon button with a filter list icon" routerLink="pages/tarifas-list">
               <mat-icon>filter_list</mat-icon>
             </a>
           </div>
