--- a/src/app/pages/ayuda/ayuda.component.html
+++ b/src/app/pages/ayuda/ayuda.component.html
@@ -1,1 +1,51 @@
-<p>ayuda works!</p>
+<h1>Manual de Usuario</h1>
+<mat-card class="manual-usuario">
+    <mat-card-title>Ingreso de Vehículo</mat-card-title>
+    <mat-card-content>
+      <p>En esta sección, aprenderás cómo marcar la entrada y salida de tu vehículo en el parqueadero. Después te encuentras con esta ventana y das click en Marcar Entrada/Salida o en +1 o en la imagen</p>
+      <img src="assets/p1.jpeg" alt="Marcar Entrada/Salida" width="700px">
+      <p>Para marcar la entrada de tu vehículo:</p>
+      <ol>
+        <li>Ingresa a la sección de "Marcar Entrada/Salida" en el menú principal. Das click en Registrar Vehículo</li>
+        <img src="assets/p2.jpeg" alt="Marcar Entrada/Salida" width="700px">
+        <li>Completa los datos solicitados.</li>
+        <img src="assets/p3.jpeg" alt="Marcar Entrada/Salida" width="700px">
+        <li>Haz clic en el botón "Guardar" para registrar la entrada de tu vehículo en el parqueadero.</li>
+        <img src="assets/p4.jpeg" alt="Marcar Entrada/Salida" width="700px">
+      </ol>
+    </mat-card-content>
+  </mat-card>
+  
+  <mat-card class="marcar-salida">
+    <mat-card-title>Marcar Salida</mat-card-title>
+    <mat-card-content>
+      <p>Para marcar la salida de tu vehículo:</p>
+      <ol>
+        <li>Ingresa a la sección de "Marcar Entrada/Salida" en el menú principal.</li>
+        <li>Busca la entrada de tu vehículo en la lista de registros.</li>
+        <li>Haz clic en el botón "Marcar Salida" para registrar la salida de tu vehículo del parqueadero.</li>
+      </ol>
+    </mat-card-content>
+  </mat-card>
+  
+  <mat-card class="consultar-tarifa">
+    <mat-card-title>Consultar Tarifa</mat-card-title>
+    <mat-card-content>
+      <p>En esta sección, podrás consultar la tarifa correspondiente a tu vehículo.</p>
+  
+      <p>Para consultar la tarifa:</p>
+      <ol>
+        <li>Ingresa a la sección de "Tarifas" en el menú principal. Y das click en agregar nueva tarifa</li>
+        <img src="assets/p5.jpeg" alt="Consultar Tarifa" class="consultar-img" width="700px">
+        <li>Completa los datos solicitados.</li>
+        <img src="assets/p6.jpeg" alt="Eliminar Registro" class="eliminar-img" width="700px">
+        <li>A continuación se mostrará la Tarifa creada</li>
+        <img src="assets/p7.jpeg" alt="Eliminar Registro" class="eliminar-img" width="700px">
+        <li>En el caso de Eliminar, se da click en el basurero</li>
+        <img src="assets/p8.jpeg" alt="Eliminar Registro" class="eliminar-img" width="700px">
+        <li>Posteriormente, se mostrará una ventana de alerta</li>
+        <img src="assets/p9.jpeg" alt="Eliminar Registro" class="eliminar-img" width="700px">
+      </ol>
+    </mat-card-content>
+  </mat-card>
+  
